--- a/dindan.html
+++ b/dindan.html
@@ -133,10 +133,10 @@
 						        <i class="iconfont icon-pingjiaxingxing"></i>
 						        <i class="iconfont icon-pingjiaxingxing"></i>
 						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
+						        <i class="iconfont icon-pingjiaxingxing" style="color: rgba(0,0,0,0.5);"></i>
 							</span>
-						    <span>5</span>
-						    <span class="yj">月售2528单</span>
+						    <span>4</span>
+						    <span class="yj">月售258单</span>
 						    <span class="v">订单已送达</span>
 						</p>
 						<p>
