--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 				<a href="shop.html">
 					<div class="left-img li05"></div>
 					<div class="right-text">
-						<h3>朴式拌饭</h3>
+						<h3>三红锅贴</h3>
 						<p class="iconxx">
 							<span>
 								<i class="iconfont icon-pingjiaxingxing"></i>
@@ -349,19 +349,19 @@
 			</a>
 		</li>
 		<li>
-			<a href="#">
+			<a href="find.html">
 				<i class="iconfont icon-find"></i>
 			    <p>发现</p>
 			</a>
 		</li>
 		<li>
-			<a href="#">
+			<a href="dindan.html">
 				<i class="iconfont icon-single"></i>
 			    <p>订单</p>
 			</a>
 		</li>
 		<li>
-			<a href="#">
+			<a href="my.html">
 				<i class="iconfont icon-icon7"></i>
 			    <p>我的</p>
 			</a>
