--- a/my.html
+++ b/my.html
@@ -35,203 +35,89 @@
 				<span>昵称：</span>
 				<span>忧郁xiao流氓</span>
 			</h1>
-			<p class="icon">
+			<div class="icon">
 				<div>
 					<span>
 					<i class="iconfont icon-pingjiaxingxing"></i>
 				    <i class="iconfont icon-pingjiaxingxing"></i>
 					<i class="iconfont icon-pingjiaxingxing"></i>
 				    <i class="iconfont icon-pingjiaxingxing"></i>
-					<i class="iconfont icon-pingjiaxingxing"></i>
 			    	</span>
 				    <span>VIP</span>
 				</div>
 				<i class="iconfont icon-you"></i>
-			</p>
-			<p>
+			</div>
+			<p  class="phone">
 				<i class="iconfont icon-shouji"></i>
 				<span>18735605086</span>
 			</p>
 		</div>
 	</div>
 	</div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<!--历史订单列表窗口-->
-	<div class="history">
-		<!--历史订单列表-->
-		<ul class="history-list">
-			<!--历史订单-->
-			<li>
-				<a href="shop.html">
-					<div class="left-img li01"></div>
-					<div class="right-text">
-						<h3>朴式拌饭</h3>
-						<p class="iconxx">
-							<span>
-								<i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-							</span>
-						    <span>5</span>
-						    <span class="yj">月售968单</span>
-						    <span class="v">订单已送达</span>
-						</p>
-						<p>
-							<span>
-								<i class="iconfont icon-hongbao"></i>
-								<span>2018-6-26</span>
-								<span>12:30</span>
-							</span>
-							<span>&yen;125</span>
-						</p>
-						<p class="label">
-							<span class="blue">再来一单</span>
-							<span>评价晒图</span>
-						</p>
-					</div>
-				</a>
-			</li>
-			<li>
-				<a href="shop.html">
-					<div class="left-img li02"></div>
-					<div class="right-text">
-						<h3>老成都川菜馆</h3>
-						<p class="iconxx">
-							<span>
-								<i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing" style="color: rgba(0,0,0,0.5);"></i>
-							</span>
-						    <span>4</span>
-						    <span class="yj">月售556单</span>
-						    <span class="v">订单已送达</span>
-						</p>
-						<p>
-							<span>
-								<i class="iconfont icon-hongbao"></i>
-								<span>2018-6-20</span>
-								<span>12:20</span>
-							</span>
-							<span>&yen;150</span>
-						</p>
-						<p class="label">
-							<span class="blue">再来一单</span>
-							<span>评价晒图</span>
-						</p>
-					</div>
-				</a>
-			</li>
-			<li>
-				<a href="shop.html">
-					<div class="left-img li03"></div>
-					<div class="right-text">
-						<h3>馋幺鸡秘汁炒鸡</h3>
-						<p class="iconxx">
-							<span>
-								<i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-							</span>
-						    <span>5</span>
-						    <span class="yj">月售89单</span>
-						    <span class="v">订单已送达</span>
-						</p>
-						<p>
-							<span>
-								<i class="iconfont icon-hongbao"></i>
-								<span>2018-5-27</span>
-								<span>12:32</span>
-							</span>
-							<span>&yen;103</span>
-						</p>
-						<p class="label">
-							<span class="blue">再来一单</span>
-							<span>评价晒图</span>
-						</p>
-					</div>
-				</a>
-			</li>
-			<li>
-				<a href="shop.html">
-					<div class="left-img li04"></div>
-					<div class="right-text">
-						<h3>贝克汉堡（铜锣湾店）</h3>
-						<p class="iconxx">
-							<span>
-								<i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-							</span>
-						    <span>5</span>
-						    <span class="yj">月售2528单</span>
-						    <span class="v">订单已送达</span>
-						</p>
-						<p>
-							<span>
-								<i class="iconfont icon-hongbao"></i>
-								<span>2018-4-17</span>
-								<span>12:31</span>
-							</span>
-							<span>&yen;134</span>
-						</p>
-						<p class="label">
-							<span class="blue">再来一单</span>
-							<span>评价晒图</span>
-						</p>
-					</div>
-				</a>
-			</li>
-			<li>
-				<a href="shop.html">
-					<div class="left-img li05"></div>
-					<div class="right-text">
-						<h3>朴式拌饭</h3>
-						<p class="iconxx">
-							<span>
-								<i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-						        <i class="iconfont icon-pingjiaxingxing"></i>
-							</span>
-						    <span>5</span>
-						    <span class="yj">月售262单</span>
-						    <span class="v">订单已送达</span>
-						</p>
-						<p>
-							<span>
-								<i class="iconfont icon-hongbao"></i>
-								<span>2018-4-6</span>
-								<span>12:35</span>
-							</span>
-							<span>&yen;122</span>
-						</p>
-						<p class="label">
-							<span class="blue">再来一单</span>
-							<span>评价晒图</span>
-						</p>
-					</div>
-				</a>
-			</li>
-			<div class="lost"></div>
-		</ul>
+	<!--钱币buf-->
+	<div class="money">
+		<div>
+			<div>540.0元</div>
+			<div>
+				<i class="iconfont icon-qianbao"></i>
+				<span>钱包</span>
+			</div>
+		</div>
+		<div>
+			<div>16个</div>
+			<div>
+				<i class="iconfont icon-qianbao"></i>
+				<span>优惠</span>
+			</div>
+		</div>
+		<div>
+			<div>2800个</div>
+			<div>
+				<i class="iconfont icon-qianbao"></i>
+				<span>金币</span>
+			</div>
+		</div>
 	</div>
+	<!--地址客服部分-->
+	<div class="location">
+		<a href="#">
+			<i class="iconfont icon-location"></i>
+			<span>收货地址</span>
+		</a>
+		<div></div>
+		<a href="#">
+			<i class="iconfont icon-xin"></i>
+			<span>我的收藏</span>
+		</a>
+		<div></div>
+		<a href="#">
+			<i class="iconfont icon-kefu"></i>
+			<span>我的客服</span>
+		</a>
+	</div>
+	<!--地址客服部分-->
+	<div class="location">
+		<a href="#">
+			<i class="iconfont icon-location"></i>
+			<span>收货地址</span>
+		</a>
+		<div></div>
+		<a href="#">
+			<i class="iconfont icon-xin"></i>
+			<span>我的收藏</span>
+		</a>
+		<div></div>
+		<a href="#">
+			<i class="iconfont icon-kefu"></i>
+			<span>我的客服</span>
+		</a>
+	</div>
+	
+	
+	
+	
+	
+	
 	
 	<!--tab栏-->
 	<ul class="tab">
